[package]
name = "internal_stripe_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
thiserror = "2.0.18"
futures-util = "0.3.32"
async-stripe = "=1.0.0-rc.5"
async-stripe-checkout = { version = "=1.0.0-rc.5", features = ["checkout_session"] }
async-stripe-shared = "=1.0.0-rc.5"
async-stripe-types = "=1.0.0-rc.5"
async-stripe-webhook = "=1.0.0-rc.5"
async-stripe-billing = { version = "=1.0.0-rc.5", features = ["subscription", "billing_portal_session", "billing_meter_event"] }
async-stripe-core = { version = "=1.0.0-rc.5", features = ["customer"] }
google-cloud-pubsub      = { package = "gcloud-pubsub", version = "1.1.0" }
google-cloud-googleapis  = { package = "gcloud-googleapis", version = "1.3.0" }
axum = "0.8"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }
reqwest = { version = "0.13", features = ["json"] }


[dev-dependencies]
testcontainers = "0.27"
wiremock = "0.6"